added tests, implementing zonal statistics

--- a/app/api.yaml
+++ b/app/api.yaml
@@ -18,6 +18,7 @@ definitions:
     enum:
       - satellite
       - ndvi
+      - legger
       - landuse
       - landuse-legger
       - landuse-vs-legger
