--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -3,4 +3,5 @@ Flask-Cors==3.0.3
 gunicorn==19.7.1
 earthengine-api==0.1.135
 flasgger==0.8.1
-oauth2client==4.1.2
+oauth2client==4.1.2          
+google-cloud-firestore==1.4.0
