--- a/app/app.yaml
+++ b/app/app.yaml
@@ -1,6 +1,6 @@
 runtime: python
 env: flex
-entrypoint: gunicorn -b :$PORT main:app
+entrypoint: gunicorn -t 300 -b :$PORT main:app
 
 runtime_config:
   python_version: 3
