--- a/app/app.yaml
+++ b/app/app.yaml
@@ -9,8 +9,8 @@ manual_scaling:
   instances: 1
 
 resources:
-  cpu: .5
-  memory_gb: 0.9
+  cpu: 1
+  memory_gb: 2
   disk_size_gb: 10
 
 handlers:
