Edit cron job to run at 00:00 daily

--- a/app/cron.yaml
+++ b/app/cron.yaml
@@ -1,4 +1,6 @@
 cron:
 - description: "update cloudfree tile images"
   url: /update_cloudfree_tile_images/
-  schedule: every 24 hours
+  schedule: every day 00:00
+  timezone: Europe/Amsterdam
+  target: v2-test
